WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56735
FIx build break when inspector is enabled
https://bugs.webkit.org/show_bug.cgi?id=56735
Summary
FIx build break when inspector is enabled
Jaehun Lim
Reported
2011-03-21 01:38:22 PDT
ENABLE(INSPECTOR) is missed in FrameLoader.cpp after
r77950
. So build break happens when inspector is enabled.
Attachments
Patch
(1.18 KB, patch)
2011-03-21 01:46 PDT
,
Jaehun Lim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jaehun Lim
Comment 1
2011-03-21 01:46:25 PDT
Created
attachment 86304
[details]
Patch
WebKit Commit Bot
Comment 2
2011-03-21 03:53:34 PDT
Comment on
attachment 86304
[details]
Patch Clearing flags on attachment: 86304 Committed
r81576
: <
http://trac.webkit.org/changeset/81576
>
WebKit Commit Bot
Comment 3
2011-03-21 03:53:38 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2011-03-21 07:31:21 PDT
http://trac.webkit.org/changeset/81576
might have broken GTK Linux 32-bit Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug