2011-03-21  Jaehun Lim  <ljaehun.lim@samsung.com>

Reviewed by Pavel Feldman.

        Fix build break when inspector is enabled.
        https://bugs.webkit.org/show_bug.cgi?id=56735

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::continueLoadAfterNavigationPolicy): Add ENABLE(INSPECTOR).

Canonical link: https://commits.webkit.org/71417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81576 268f45cc-cd09-0410-ab3c-d52691b4dbfc